--- a/.github/workflows/tenzir.yaml
+++ b/.github/workflows/tenzir.yaml
@@ -697,6 +697,7 @@ jobs:
     needs:
       - python
       - configure
+      - tenzir-nix
     if: ${{ needs.configure.outputs.run-python-package == 'true' }}
     name: Python Package
     runs-on: ${{ matrix.os }}
@@ -717,6 +718,42 @@ jobs:
         uses: abatilo/actions-poetry@v4.0.0
         with:
           poetry-version: ${{ matrix.poetry-version }}
+      - name: Install Nix (for static binaries)
+        uses: cachix/install-nix-action@v30
+        with:
+          nix_path: nixpkgs=channel:nixos-unstable
+      - name: Setup Cachix
+        uses: cachix/cachix-action@v15
+        with:
+          name: tenzir
+          authToken: "${{ secrets.CACHIX_TENZIR_API_TOKEN }}"
+          # Avoid pushing the full enterprise edition.
+          pushFilter: "tenzir-ee"
+      - name: Build static tenzir binaries with Nix
+        run: |
+          nix build .#tenzir-static
+      - name: Bundle static binaries into Python package
+        run: |
+          mkdir -p python/tenzir
+          cp -vR result/bin python/tenzir/
+          if [ -d result/libexec ]; then
+            cp -vR result/libexec python/tenzir/
+          fi
+          if [ -d result/share ]; then
+            cp -vR result/share python/tenzir/
+          fi
+      - name: Build wheel for validation
+        working-directory: python
+        run: |
+          poetry build
+      - name: Validate installed wheel exposes working tenzir binary
+        working-directory: python
+        run: |
+          python -m venv .venv
+          . .venv/bin/activate
+          python -m pip install --upgrade pip
+          python -m pip install dist/*.whl
+          tenzir version
       - name: Configure PyPI
         working-directory: python
         run: |
