--- a/python/pyproject.toml
+++ b/python/pyproject.toml
@@ -1,11 +1,20 @@
-[tool.poetry]
+[build-system]
+requires = ["setuptools>=68", "wheel"]
+build-backend = "setuptools.build_meta"
+
+[project]
 name = "tenzir"
 version = "5.19.0"
 description = "A security telemetry engine for detection and response"
-authors = ["Tenzir <engineering@tenzir.com>"]
-maintainers = ["Tenzir <engineering@tenzir.com>"]
-license = "BSD-3-Clause"
-readme = "README.md"
+readme = { file = "README.md", content-type = "text/markdown" }
+requires-python = ">=3.9"
+license = { text = "BSD-3-Clause" }
+authors = [
+  { name = "Tenzir", email = "engineering@tenzir.com" },
+]
+maintainers = [
+  { name = "Tenzir", email = "engineering@tenzir.com" },
+]
 classifiers = [
     "Development Status :: 3 - Alpha",
     "Environment :: Plugins",
@@ -18,37 +27,31 @@ classifiers = [
     "Topic :: Software Development :: Object Brokering",
     "Topic :: System :: Distributed Computing",
 ]
-homepage = "https://tenzir.com"
-documentation = "https://tenzir.com/docs"
-repository = "https://github.com/tenzir/tenzir"
-packages = [{ include = "tenzir" }]
-# If present at build time, include bundled static binaries and resources in the wheel.
-include = [
-  "tenzir/bin/**",
-  "tenzir/libexec/**",
-  "tenzir/share/**",
+dependencies = [
+  "pyarrow>=11,<19.0.1",
+  "dynaconf>=3.2,<4.0",
 ]
 
-[tool.poetry.dependencies]
-python = "^3.9"
-pyarrow = ">=11,<20"
-dynaconf = "^3.2"
+[project.optional-dependencies]
+module = ["numpy>=1.24,<3.0"]
+operator = [
+  "python-box>=7.0,<8.0",
+  "pandas>=2.1.3,<3.0",
+  "aiohttp>=3.8,<4.0",
+]
 
-aiohttp = { version = "^3.8", optional = true }
-numpy = { version = ">=1.24,<3.0", optional = true }
-python-box = { version = "^7.0", optional = true }
-pandas = { version = "^2.1.3", optional = true }
+[project.scripts]
+tenzir = "tenzir._bin.tenzir:main"
+tenzir-ctl = "tenzir._bin.tenzir_ctl:main"
 
-[tool.poetry.group.dev.dependencies]
-pytest = "^8.3"
-pytest-asyncio = "^0.25.2"
+[dependency-groups]
+dev = [
+  "pytest>=8.3,<9.0",
+  "pytest-asyncio>=0.25.2,<0.26.0",
+]
 
 [tool.pytest.ini_options]
 asyncio_mode = "auto" # required for async fixtures
-
-[tool.poetry.extras]
-module = ["numpy"]
-operator = ["python-box", "pandas"]
 
 [tool.mypy]
 python_version = "3.10"
@@ -67,11 +70,13 @@ ignore_missing_imports = true
 select = ["ALL"]
 ignore = ["FA", "D1"]
 
-[build-system]
-requires = ["poetry-core>=1.0.0"]
-build-backend = "poetry.core.masonry.api"
+[tool.setuptools]
+packages = ["tenzir"]
+include-package-data = true
 
-[tool.poetry.scripts]
-# Expose CLI entry points that prefer the bundled static binaries on Linux.
-tenzir = "tenzir._bin.tenzir:main"
-tenzir-ctl = "tenzir._bin.tenzir_ctl:main"
+[tool.setuptools.package-data]
+"tenzir" = [
+  "bin/**",
+  "libexec/**",
+  "share/**",
+]
