--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -844,10 +844,10 @@ endif ()
 
 # -- python bindings ----------------------------------------------------------
 
-option(TENZIR_ENABLE_PYTHON_BINDINGS "Build Python bindings (requires poetry)"
+option(TENZIR_ENABLE_PYTHON_BINDINGS "Build Python bindings (requires uv)"
        ON)
 add_feature_info("TENZIR_ENABLE_PYTHON_BINDINGS" TENZIR_ENABLE_PYTHON_BINDINGS
-                 "build Python bindings (requires poetry).")
+                 "build Python bindings (requires uv).")
 
 set(TENZIR_ENABLE_BUNDLED_UV_default "ON")
 if (DEFINED ENV{TENZIR_ENABLE_BUNDLED_UV})
@@ -861,80 +861,96 @@ add_feature_info("TENZIR_ENABLE_BUNDLED_UV" TENZIR_ENABLE_BUNDLED_UV
                  "install a statically linked copy of uv.")
 
 if (TENZIR_ENABLE_PYTHON_BINDINGS)
-  find_program(POETRY_PATH poetry)
-  if (NOT POETRY_PATH)
-    message(
-      FATAL_ERROR
-        "Cannot find 'poetry' in PATH, which is required for building Tenzir Python bindings"
-    )
-  endif ()
-  # Poetry has no support for specifying a working directory for the build
-  # command, so in order to make the installation not modify the source directory
-  # we need to copy the Python bindings in their entirety into the build directory
-  # first.
   set(TENZIR_PYTHON_BINARY_DIR "${CMAKE_BINARY_DIR}/share/tenzir/python")
-  set(TENZIR_PYTHON_WHEEL
-      "${TENZIR_PYTHON_BINARY_DIR}/tenzir-${TENZIR_VERSION}-py3-none-any.whl")
-  file(
-    WRITE "${CMAKE_CURRENT_BINARY_DIR}/build-wheel.cmake"
-    "\
-    cmake_minimum_required(VERSION 3.30...4.0 FATAL_ERROR)
-    file(REMOVE_RECURSE \"${CMAKE_CURRENT_BINARY_DIR}/python\")
-    file(
-      COPY \"${CMAKE_CURRENT_SOURCE_DIR}/python/\"
-      DESTINATION \"${CMAKE_CURRENT_BINARY_DIR}/python\"
-      REGEX \"/dist/\" EXCLUDE)
-    # Poetry evaluates the top-level gitignore, which leads it to ignore
-    # everything in case the install prefix is in an ignored path. Setting the
-    # git directory explicitly works around the issue.
-    set(ENV{GIT_DIR} \"/dev/null\")
-    execute_process(
-      COMMAND \"${POETRY_PATH}\" build --no-interaction --format=wheel -vvv
-      WORKING_DIRECTORY \"${CMAKE_CURRENT_BINARY_DIR}/python\"
-      COMMAND_ERROR_IS_FATAL ANY)
-    file(
-      GLOB _wheel
-      \"${CMAKE_CURRENT_BINARY_DIR}/python/dist/*.whl\")
-    file(MAKE_DIRECTORY \"${CMAKE_BINARY_DIR}/share/tenzir/python\")
-    file(COPY_FILE \"\${_wheel}\" \"${TENZIR_PYTHON_WHEEL}\")")
-  add_custom_command(
-    OUTPUT "${TENZIR_PYTHON_WHEEL}"
-    COMMAND ${CMAKE_COMMAND} -P "${CMAKE_CURRENT_BINARY_DIR}/build-wheel.cmake"
-    DEPENDS ${CMAKE_CURRENT_SOURCE_DIR}/python)
-  add_custom_target(tenzir-python-wheel DEPENDS "${TENZIR_PYTHON_WHEEL}")
-  install(
-    DIRECTORY "${TENZIR_PYTHON_BINARY_DIR}"
-    DESTINATION "${CMAKE_INSTALL_DATADIR}/tenzir"
-    COMPONENT Runtime)
-  if (TENZIR_ENABLE_BUNDLED_UV)
-    set(build_libexecdir "${CMAKE_BINARY_DIR}/${CMAKE_INSTALL_LIBEXECDIR}")
-    if (NOT TENZIR_UV_PATH)
-      file(READ "${CMAKE_CURRENT_LIST_DIR}/python/uv-source-info.json"
-           uv_source_info)
-      set(UV_SYSTEM_arm64_Darwin "aarch64-darwin")
-      set(UV_SYSTEM_aarch64_Linux "aarch64-linux")
-      set(UV_SYSTEM_x86_64_Darwin "x86_64-darwin")
-      set(UV_SYSTEM_x86_64_Linux "x86_64-linux")
-      string(
-        JSON uv_source GET "${uv_source_info}"
-        "${UV_SYSTEM_${CMAKE_HOST_SYSTEM_PROCESSOR}_${CMAKE_HOST_SYSTEM_NAME}}")
-      string(JSON uv_url GET "${uv_source}" url)
-      string(JSON uv_sha256 GET "${uv_source}" sha256)
-      get_filename_component(uv_stem "${uv_url}" NAME_WE)
-      file(DOWNLOAD "${uv_url}" "${CMAKE_CURRENT_BINARY_DIR}/uv.tar.gz"
-           EXPECTED_HASH "SHA256=${uv_sha256}")
-      file(ARCHIVE_EXTRACT INPUT "${CMAKE_CURRENT_BINARY_DIR}/uv.tar.gz"
-           DESTINATION "${CMAKE_CURRENT_BINARY_DIR}" VERBOSE)
-      set(TENZIR_UV_PATH "${CMAKE_CURRENT_BINARY_DIR}/${uv_stem}/uv")
-    endif ()
-    file(MAKE_DIRECTORY "${build_libexecdir}")
-    file(COPY_FILE "${TENZIR_UV_PATH}" "${build_libexecdir}/uv")
-    install(
-      PROGRAMS "${TENZIR_UV_PATH}"
-      DESTINATION "${CMAKE_INSTALL_LIBEXECDIR}"
-      COMPONENT Runtime)
+  if (TENZIR_PYTHON_OPERATOR_WHEEL)
+    set(TENZIR_PYTHON_CORE_WHEEL_DST
+        "${TENZIR_PYTHON_BINARY_DIR}/tenzir_core-${TENZIR_VERSION}-py3-none-any.whl")
+    set(TENZIR_PYTHON_OPERATOR_WHEEL_DST
+        "${TENZIR_PYTHON_BINARY_DIR}/tenzir_operators-${TENZIR_VERSION}-py3-none-any.whl")
+    file(MAKE_DIRECTORY "${CMAKE_BINARY_DIR}/share/tenzir/python")
+    file(COPY_FILE "${TENZIR_PYTHON_CORE_WHEEL}" "${TENZIR_PYTHON_CORE_WHEEL_DST}")
+    file(COPY_FILE "${TENZIR_PYTHON_OPERATOR_WHEEL}" "${TENZIR_PYTHON_OPERATOR_WHEEL_DST}")
   else ()
-    set(TENZIR_UV_PATH "uv")
+    find_program(UV_PATH uv)
+    if (NOT UV_PATH)
+      message(
+        FATAL_ERROR
+          "Cannot find 'uv' in PATH, which is required for building Tenzir Python bindings"
+      )
+    endif ()
+    # Copy the Python workspace into the build tree so uv operates on a temporary
+    # directory and does not modify the source checkout.
+    set(TENZIR_PYTHON_WHEEL
+        "${TENZIR_PYTHON_BINARY_DIR}/tenzir_operators-${TENZIR_VERSION}-py3-none-any.whl")
+    file(
+      WRITE "${CMAKE_CURRENT_BINARY_DIR}/build-wheel.cmake"
+      "\
+      cmake_minimum_required(VERSION 3.30...4.0 FATAL_ERROR)
+
+      file(REMOVE_RECURSE ${CMAKE_CURRENT_BINARY_DIR}/python)
+
+      file(
+        COPY ${CMAKE_CURRENT_SOURCE_DIR}/python/
+        DESTINATION ${CMAKE_CURRENT_BINARY_DIR}/python
+        REGEX \"/dist/\" EXCLUDE)
+      set(ENV{GIT_DIR} /dev/null)
+      set(ENV{UV_CACHE_DIR} ${CMAKE_BINARY_DIR}/uv-cache)
+      set(ENV{TENZIR_SKIP_NIX_BUILD} 1)
+      set(ENV{TENZIR_REPO_ROOT} ${CMAKE_SOURCE_DIR})
+      execute_process(
+        COMMAND ${UV_PATH} build --package tenzir-operators
+        WORKING_DIRECTORY ${CMAKE_CURRENT_BINARY_DIR}/python
+        COMMAND_ERROR_IS_FATAL ANY)
+      file(
+        GLOB _wheel
+        ${CMAKE_CURRENT_BINARY_DIR}/python/dist/tenzir_operators-*.whl)
+      if (NOT _wheel)
+        message(FATAL_ERROR \"uv build did not produce a tenzir_operators wheel\")
+      endif ()
+      list(GET _wheel 0 _selected_wheel)
+      file(MAKE_DIRECTORY ${CMAKE_BINARY_DIR}/share/tenzir/python)
+      file(REMOVE ${TENZIR_PYTHON_WHEEL})
+      file(COPY_FILE \"\${_selected_wheel}\" ${TENZIR_PYTHON_WHEEL})")
+  
+  add_custom_command(
+      OUTPUT "${TENZIR_PYTHON_WHEEL}"
+      COMMAND ${CMAKE_COMMAND} -P "${CMAKE_CURRENT_BINARY_DIR}/build-wheel.cmake"
+      DEPENDS ${CMAKE_CURRENT_SOURCE_DIR}/python)
+    add_custom_target(tenzir-python-wheel DEPENDS "${TENZIR_PYTHON_WHEEL}")
+    install(
+      DIRECTORY "${TENZIR_PYTHON_BINARY_DIR}"
+      DESTINATION "${CMAKE_INSTALL_DATADIR}/tenzir"
+      COMPONENT Runtime)
+    if (TENZIR_ENABLE_BUNDLED_UV)
+      set(build_libexecdir "${CMAKE_BINARY_DIR}/${CMAKE_INSTALL_LIBEXECDIR}")
+      if (NOT TENZIR_UV_PATH)
+        file(READ "${CMAKE_CURRENT_LIST_DIR}/python/uv-source-info.json"
+             uv_source_info)
+        set(UV_SYSTEM_arm64_Darwin "aarch64-darwin")
+        set(UV_SYSTEM_aarch64_Linux "aarch64-linux")
+        set(UV_SYSTEM_x86_64_Darwin "x86_64-darwin")
+        set(UV_SYSTEM_x86_64_Linux "x86_64-linux")
+        string(
+          JSON uv_source GET "${uv_source_info}"
+          "${UV_SYSTEM_${CMAKE_HOST_SYSTEM_PROCESSOR}_${CMAKE_HOST_SYSTEM_NAME}}")
+        string(JSON uv_url GET "${uv_source}" url)
+        string(JSON uv_sha256 GET "${uv_source}" sha256)
+        get_filename_component(uv_stem "${uv_url}" NAME_WE)
+        file(DOWNLOAD "${uv_url}" "${CMAKE_CURRENT_BINARY_DIR}/uv.tar.gz"
+             EXPECTED_HASH "SHA256=${uv_sha256}")
+        file(ARCHIVE_EXTRACT INPUT "${CMAKE_CURRENT_BINARY_DIR}/uv.tar.gz"
+             DESTINATION "${CMAKE_CURRENT_BINARY_DIR}" VERBOSE)
+        set(TENZIR_UV_PATH "${CMAKE_CURRENT_BINARY_DIR}/${uv_stem}/uv")
+      endif ()
+      file(MAKE_DIRECTORY "${build_libexecdir}")
+      file(COPY_FILE "${TENZIR_UV_PATH}" "${build_libexecdir}/uv")
+      install(
+        PROGRAMS "${TENZIR_UV_PATH}"
+        DESTINATION "${CMAKE_INSTALL_LIBEXECDIR}"
+        COMPONENT Runtime)
+    else ()
+      set(TENZIR_UV_PATH "uv")
+    endif ()
   endif ()
 endif ()
 
