Fix up python tenzir wheel

--- a/python/pyproject.toml
+++ b/python/pyproject.toml
@@ -37,3 +37,9 @@ ignore_missing_imports = true
 [tool.ruff.lint]
 select = ["ALL"]
 ignore = ["FA", "D1"]
+
+[[tool.uv.index]]
+name = "testpypi"
+url = "https://test.pypi.org/simple/"
+publish-url = "https://test.pypi.org/legacy/"
+explicit = true
