--- a/python/tenzir/pyproject.toml
+++ b/python/tenzir/pyproject.toml
@@ -42,6 +42,7 @@ Repository = "https://github.com/tenzir/tenzir"
 [project.scripts]
 tenzir = "tenzir._bin.tenzir:main"
 tenzir-ctl = "tenzir._bin.tenzir_ctl:main"
+tenzir-node = "tenzir._bin.tenzir_node:main"
 
 [tool.setuptools]
 package-dir = {"" = "src"}
