--- a/plugins/kafka/CMakeLists.txt
+++ b/plugins/kafka/CMakeLists.txt
@@ -7,7 +7,10 @@ project(
 
 include(CTest)
 
-find_package(AWSSDK COMPONENTS core identity-management REQUIRED CONFIG)
+find_package(
+  AWSSDK
+  COMPONENTS core identity-management
+  REQUIRED CONFIG)
 find_package(Tenzir REQUIRED)
 
 TenzirRegisterPlugin(
@@ -22,6 +25,16 @@ if (NOT RdKafka_FOUND)
   list(APPEND CMAKE_MODULE_PATH "${CMAKE_CURRENT_SOURCE_DIR}/cmake")
   find_package(RdKafka QUIET REQUIRED)
   list(POP_BACK CMAKE_MODULE_PATH)
+endif ()
+
+if (TENZIR_ENABLE_STATIC_EXECUTABLE)
+  # rdkafka doesn't resolve transitive dependencies of cyrus_sasl correctly.
+  # This is really CMake's fault for not providing a seamlesss integration
+  # with pkg-config.
+  set_property(
+    TARGET RdKafka::rdkafka
+    APPEND
+    PROPERTY INTERFACE_LINK_LIBRARIES "db")
 endif ()
 
 dependency_summary("rdkafka" RdKafka::rdkafka++ "Dependencies")
